Data/Logs/log-2020-07-16.txt


=============================================================
Время: 2020-07-16 09:53:32.042840

Ошибка:
Member "money" not found
=============================================================

=============================================================
Время: 2020-07-16 09:54:11.468219

Ошибка:
You are on cooldown. Try again in 14360.60s
=============================================================

=============================================================
Время: 2020-07-16 10:02:43.942418

Ошибка:
Command raised an exception: UnboundLocalError: local variable 'rand_money' referenced before assignment
=============================================================

=============================================================
Время: 2020-07-16 10:42:29.734350

Ошибка:
Command raised an exception: TypeError: unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'
=============================================================

=============================================================
Время: 2020-07-16 19:00:45.139241

Ошибка:
Command raised an exception: NameError: name 'Prefix' is not defined
=============================================================

=============================================================
Время: 2020-07-16 19:04:25.788265

Ошибка:
Command raised an exception: NameError: name 'json_load' is not defined
=============================================================

=============================================================
Время: 2020-07-16 19:05:08.733633

Ошибка:
Command "prefix" is not found
=============================================================

=============================================================
Время: 2020-07-16 21:32:57.907968

Ошибка:
Traceback (most recent call last):
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 596, in _load_from_module_spec
    spec.loader.exec_module(lib)
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "E:\PyProg\ProstoTools(Original version)\Cogs\settings.py", line 378
    settings.update('anti_flud': action)
                               ^
SyntaxError: invalid syntax

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "bot.py", line 75, in <module>
    client.load_extension(f'Cogs.{filename[:-3]}')
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 653, in load_extension
    self._load_from_module_spec(spec, name)
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 599, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'Cogs.settings' raised an error: SyntaxError: invalid syntax (settings.py, line 378)

=============================================================

=============================================================
Время: 2020-07-16 21:33:58.010293

Ошибка:
action is a required argument that is missing.
=============================================================